--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@prismicio/client": "^5.1.0",
@@ -25,11 +26,20 @@
     "stripe": "^8.176.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
+    "@testing-library/dom": "^8.7.1",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.1",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^16.9.2",
     "@types/react": "^17.0.21",
+    "babel-jest": "^27.2.4",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.2.4",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.4.3"
   }
 }
